checked html preview for any missing links, added mockup image correctly

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <!-- the device mockup image -->
     <div class="device-mockup-img">
-        <img src="./images/" alt="a image displaying what the app looks like">
+        <img src="./images/device mockup 1.svg" alt="a image displaying what the app looks like">
     </div>
     <!-- call to action  -->
     <div class="call-to-action">
@@ -52,9 +52,9 @@
     </div>
     <!-- footer -->
     <footer>
-        <a href=""></a>
-        <a href="">
-        </a><a href=""></a>
+        <a class="bold-body-text" href="#">Contact Us</a>
+        <a class="bold-body-text" href="#">Privacy</a>
+        <a class="bold-body-text" href="#">Terms</a>
     </footer>
     
 </body>
